--- a/src/pages/About.module.css
+++ b/src/pages/About.module.css
@@ -92,7 +92,7 @@
   position: relative;
   z-index: 5;
   width: 100%;
-  max-width: 1525px;
+  max-width: 1720px;
   justify-content: flex-end;
   padding: 200px 174px 120px 0;
   margin: 0 auto;
